Fixed bug where check-in data was not persistently saved. Missing list no longer vertically clipped.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -314,6 +314,7 @@ nav.menu li {
 
 
 #missing {
+	position: absolute;
 	text-align: right; }
 	
 #missingx {
